--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
 asgiref==3.7.2
 Django==4.2
+gunicorn==21.2.0
+packaging==23.2
 pillow==10.2.0
+psycopg==3.1.18
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
 sqlparse==0.4.4
+typing_extensions==4.9.0
 tzdata==2024.1
+whitenoise==6.3.0
